--- a/en/Meetingschedule.html
+++ b/en/Meetingschedule.html
@@ -2,83 +2,76 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>2015世界互联网大会|会议日程</title>
+    <title>会议日程</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/reset.css">
 </head>
 <body style="background:#f6f6f6;">
-    <div class="ue-bar">
-        <div class="ue-bar-warp">
-            <div class="ue-bar-logo">
-                <a href="index.html">
-                    <img src="../images/activity_logo.png">
-                </a>
-            </div>
-            <ul class="ue-lm">
-                <li><a href="speech.html">SPEAKERS</a></li>
-                <li class="active"><a href="Meetingschedule.html">MEETING SCHEDULE</a></li>
-                <li><a href="yuhuiqunti1.html">PARTICIPANTS</a></li>
-                <li><a href="contact.html">CONTACT US</a></li>
-            </ul>
-            <div class="language_list">
-                <i class="select_icon"></i>
-               <label class="select_language">English</label>
-               <ul class="language_bar">
-                   <li><a href="../Meetingschedule.html">中文</a></li>
-                   <li id="no-line"><a href="javascript:;">English</a></li>
-               </ul>
-            </div>
+<div class="ue-bar">
+    <div class="ue-bar-warp">
+        <div class="ue-bar-logo">
+            <a href="index.html">
+                <img src="../images/activity_logo.png">
+            </a>
         </div>
-    </div>
-    <div class="banner">
-        <img src="../images/lm/lm_02.jpg" class="lm_height">
-    </div>
-    <div class="content_meeting">
-        <ul class="date_btn">
-            <li class="active" id="no_marginF">17th Oct,AM</li>
-            <li>17th Oct,PM</li>
-            <li>18th Oct,AM</li>
-            <li>18th Oct,PM</li>
+        <ul class="ue-lm">
+            <li><a href="speech.html">SPEAKERS</a></li>
+            <li class="active"><a href="Meetingschedule.html">MEETING SCHEDULE</a></li>
+            <li><a href="yuhuiqunti1.html">PARTICIPANTS</a></li>
+            <li><a href="contact.html">CONTACT US</a></li>
         </ul>
-        <div class="meeting_tab" >
-            <div class="box1 clearfix  ">
-                <span class="w_format line">17th Oct,AM</span>
-                <div class="right-icon">
-                <i class="icon_big"></i>
-                <span class="meeting_word1">Confirmed</span> 
-                <i class="icon_big1"></i>
-                <span class="meeting_word2">Confirmation</span>
+                <div class="language_list">
+                    <i class="select_icon"></i>
+                   <label class="select_language">English</label>
+                   <ul class="language_bar">
+                       <li><a href="../Meetingschedule.html">中文</a></li>
+                       <li id="no-line"><a href="javascript:;">English</a></li>
+                   </ul>
                 </div>
-                <p class="meeting_time time1_pos">There will be two sub-forums within the conference:
-                <p class="meeting_time"> 1) Smart Tourism (hosted by Information Division of National Tourism Administration). This forum will provide a communication platform for national and regional tourismadministrations, tourist attractions, and smart tourism technological solution companies.Possible topics for discussion on this forum include:  new trendsof smart tourism, tourism decisions based on big data, Chinese outbound tourism, multi-device and transboundary-integrated marketing, mobile tourism, smart tourism innovation, O2O transformation oftravel businesses.</p>
-                <p class="meeting_time"> 2) Tourism Internet + Finance: O2Otourism,tourism product innovation, the sharing economy, integration of tourism supply chains, investment, takeoverand acquisitions of tourism businesses are relevant topics for this forum.</p>
-            </div>
-        <div class="box1 clearfix hide ">
-            <span class="w_format line">17th Oct,PM</span>
-            <div class="right-icon">
+    </div>
+</div>
+<div class="banner">
+   <img src="../images/lm/lm_02.jpg" class="lm_height">
+</div>
+<div class="content_meeting">
+    <ul class="date_btn">
+        <li class="active" id="no_marginF">17th Oct,AM</li>
+        <li>17th Oct,PM</li>
+        <li>18th Oct,AM</li>
+        <li>18th Oct,PM</li>
+    </ul>
+    <div class="meeting_tab" >
+        <div class="box1 clearfix  ">
+            <span class="w_format line">17th Oct,AM</span>
             <i class="icon_big"></i>
             <span class="meeting_word1">Confirmed</span> 
             <i class="icon_big1"></i>
             <span class="meeting_word2">Confirmation</span>
-            </div>
+            <p class="meeting_time time1_pos">There will be two sub-forums within the conference:
+            <p class="meeting_time"> 1) Smart Tourism (hosted by Information Division of National Tourism Administration). This forum will provide a communication platform for national and regional tourismadministrations, tourist attractions, and smart tourism technological solution companies.Possible topics for discussion on this forum include:  new trendsof smart tourism, tourism decisions based on big data, Chinese outbound tourism, multi-device and transboundary-integrated marketing, mobile tourism, smart tourism innovation, O2O transformation oftravel businesses.</p>
+            <p class="meeting_time"> 2) Tourism Internet + Finance: O2Otourism,tourism product innovation, the sharing economy, integration of tourism supply chains, investment, takeoverand acquisitions of tourism businesses are relevant topics for this forum.</p>
+            
+        </div>
+        <div class="box1 clearfix hide ">
+            <span class="w_format line">17th Oct,PM</span>
+            <i class="icon_big"></i>
+            <span class="meeting_word1">Confirmed</span> 
+            <i class="icon_big1"></i>
+            <span class="meeting_word2">Confirmation</span>
         </div>
         <div class="box1 clearfix hide ">
             <span class="w_format line">18th Oct,AM</span>
-            <div class="right-icon">
             <i class="icon_big"></i>
             <span class="meeting_word1">Confirmed</span> 
             <i class="icon_big1"></i>
             <span class="meeting_word2">Confirmation</span>
-            </div>
         </div>
         <div class="box1 clearfix hide">
             <span class="w_format line">18th Oct,PM</span>
-            <div class="right-icon">
             <i class="icon_big"></i>
             <span class="meeting_word1">Confirmed</span> 
             <i class="icon_big1"></i>
             <span class="meeting_word2">Confirmation</span>
-            </div>
         </div>
     </div>
 </div>
