--- a/en/contact.html
+++ b/en/contact.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <meta charset="UTF-8">
-  <title>2015世界互联网大会|联系我们</title>
-  <link type="text/css" rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/reset.css">
+    <meta charset="UTF-8">
+    <title>联系我们</title>
+    <link type="text/css" rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/reset.css">
 </head>
 <body bgcolor="#fff">
-  <div class="ue-bar">
-    <div class="ue-bar-warp">
-      <div class="ue-bar-logo">
-        <a href="index.html">
-          <img src="../images/activity_logo.png">
-        </a>
-      </div>
-      <ul class="ue-lm">
-        <li><a href="speech.html">SPEAKERS</a></li>
-        <li><a href="Meetingschedule.html">MEETING SCHEDULE</a></li>
-        <li><a href="yuhuiqunti1.html">PARTICIPANTS</a></li>
-        <li class="active"><a href="contact.html">CONTACT US</a></li>
-      </ul>
-      <div class="language_list">
-        <i class="select_icon"></i>
-        <label class="select_language">English</label>
-        <ul class="language_bar">
-          <li><a href="../contact.html">中文</a></li>
-          <li id="no-line"><a href="javascript:;">English</a></li>
-        </ul>
-      </div>
+<div class="ue-bar">
+  <div class="ue-bar-warp">
+    <div class="ue-bar-logo">
+      <a href="index.html">
+        <img src="../images/activity_logo.png">
+      </a>
     </div>
+    <ul class="ue-lm">
+      <li><a href="speech.html">SPEAKERS</a></li>
+      <li><a href="Meetingschedule.html">MEETING SCHEDULE</a></li>
+      <li><a href="yuhuiqunti1.html">PARTICIPANTS</a></li>
+      <li class="active"><a href="contact.html">CONTACT US</a></li>
+    </ul>
+        <div class="language_list">
+            <i class="select_icon"></i>
+               <label class="select_language">English</label>
+               <ul class="language_bar">
+                   <li><a href="../contact.html">中文</a></li>
+                   <li id="no-line"><a href="javascript:;">English</a></li>
+               </ul>
+        </div>
   </div>
-  <div class="banner">
-    <img src="../images/pic_lm4.jpg" class="lm_height">
+</div>
+<div class="banner">
+  <img src="../images/pic_lm4.jpg" class="lm_height">
+</div>
+<div class="contact_encontent">
+  <div class="contact-enlist">
+    <h1>Participants Registration</h1>
+    <p>Dr. Vera Lin<br/>E-mail:shanshanlin@zju.edu.cn<br/>Tel:+86-571-88206872<br/>Phone:+86-18667195183</p>
   </div>
-  <div class="contact_encontent">
-    <div class="contact-enlist">
-      <h1>Participants Registration</h1>
-      <p>Dr. Vera Lin<br/>E-mail:shanshanlin@zju.edu.cn<br/>Tel:+86-571-88206872<br/>Phone:+86-18667195183</p>
-    </div>
-  </div>
-  <div class="footer">
-  </div>
+</div>
+<div class="footer">
+</div>
 <script src="../js/jquery-1.9.1.min.js"></script>
 <script src="../js/myfirst.js"></script>
 <script>
