--- a/en/foot.html
+++ b/en/foot.html
@@ -2,6 +2,6 @@
 </div>
 <div class="foot_bar">
     <div class="foot_copyright">
-        <span class="font12px f999999"> Copyright  International Smart Tourism Conference; ICP No. 05066403.  powered by DRORE</span>
+        <span class="font12px f999999"> Copyright  2015 China National Tourism Administration; ICP No. 05066403.  powered by DRORE</span>
     </div>
 </div>
