--- a/en/index.html
+++ b/en/index.html
@@ -2,31 +2,33 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>2015世界互联网大会|首页</title>
-	<link rel="stylesheet" type="text/css" href="../css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<title>首页</title>
+	<link rel="stylesheet" href="../css/reset.css">
+	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" type="text/css" href="../css/font.css">
 	<link rel="stylesheet" type="text/css" href="../css/base.css">
+    <script src="../js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="../js/jquery.nicenav.js" type="text/javascript"></script>
 </head>
 <body>
-	<div class="wrap">
-		<div class="w1003">
-			<a href="index.html">
-				<img src="../images/logo.png" alt="2015世界旅游大会" class="header_bicon wlogo">
-			</a>
-			<div class="language_list">
-		   		<i class="select_icon"></i>
-	           <label class="select_language">English</label>
-	           <ul class="language_bar">
-	               <li><a href="../index.html">中文</a></li>
-	               <li id="no-line"><a href="javascript:;">English</a></li>
-	           </ul>
-			</div>
+<div class="wrap">
+	<div class="w1003">
+		<a href="index.html">
+			<img src="../images/logo.png" alt="2015世界旅游大会" class="header_bicon wlogo">
+		</a>
+		<div class="language_list">
+	   		<i class="select_icon"></i>
+           <label class="select_language">English</label>
+           <ul class="language_bar">
+               <li><a href="../index.html">中文</a></li>
+               <li id="no-line"><a href="javascript:;">English</a></li>
+           </ul>
 		</div>
 	</div>
-	<div class="wrap banner posR">
-		<img src="../images/banner_en.jpg">
-		<div class="nav_icon1 posR"> 
+</div>
+<div class="wrap banner posR">
+	<img src="../images/banner_en.jpg">
+<div class="nav_icon1 posR"> 
 			<ul class="banner-ul1 ">
 				<li>
 					<a href="speech.html" id="01_icon">
@@ -54,155 +56,158 @@
 				</li>
 			</ul>
 		</div>
-		<div class="nav_mask">
-		</div>
+		<div class="nav_index">
 	</div>
-	<div class="content_summary">
-		<div class="summary_word1">
-	  		<div class="summary_title">
-	     		<h2 class="summary_name1 font30px fcdcdcd">2015<br/>International<br/>Smart<br/>Tourism<br/>Conference</h2>
-	     		<img src="../images/summary_logo.png" class="summary_logo1">
-	  		</div>
-	 		<div class="summary_phase">
-	      		<p class="summary_phases1 font15px f888888">Jointly organized by Zhejiang University and China Tourist Attraction Association in collaboration with the United Nations World Tourism Organization (UNWTO),  Pacific Asia Travel Association (PATA), and The Hong Kong Polytechnic University, the International Smart Tourism Conference 2015 aims to establish a high-end communication platform for information sharing and exchange of views on the recent developmentsin smart tourism for relevant government sectors, research institutions, industry associations, tourism enterprises and financial institutions. </p>
-	      		<p class="summary_phases1 font15px f888888">The International Smart TourismConference will be held on October 17-18, 2015 at the Crowne Plaza Hangzhou Xandadu Resort, Hangzhou China. The theme of the conference is “New Normal, New Travel, New Experience and New Paradigm”.Such topics as information technology and its applicationsin tourism, social media and tourism, tourism product innovations and tourism internet investment will be discussed at the conference. Leading industry executives, academics and government officials in the areas of e-Tourism,Internet development, financial investment will be invited to attend and share their views on smart tourism at the conference.</p>
-	  		</div>
-		</div>
+</div>
+<div class="content_summary">
+	<div class="summary_word1">
+  		<div class="summary_title">
+	 		<!-- <h1 class="summary_year font30px fcdcdcd">2015</h1>  -->
+     		<h2 class="summary_name1 font30px fcdcdcd">2015<br/>International<br/> Smart <br/>Tourism<br/> Conference </h2>
+     		<img src="../images/summary_logo.png" class="summary_logo1">
+  		</div>
+ 		<div class="summary_phase">
+      		<p class="summary_phases1 font15px f888888">Jointly organizedby Zhejiang University and China Tourist Attraction Association in collaboration with the United Nations World Tourism Organization (UNWTO),  Pacific Asia Travel Association (PATA), and The Hong Kong Polytechnic University, the International Smart Tourism Conference 2015 aims to establish a high-end communication platform for information sharing and exchange of views on the recent developmentsin smart tourism for relevant government sectors, research institutions, industry associations, tourism enterprises and financial institutions. </p>
+      		<p class="summary_phases1 font15px f888888">The International Smart TourismConference will be held on October 17-18, 2015 at the Crowne Plaza Hangzhou Xandadu Resort, Hangzhou China. The theme of the conference is “New Normal, New Travel, New Experience and New Paradigm”.Such topics as information technology and its applicationsin tourism, social media and tourism, tourism product innovations and tourism internet investment will be discussed at the conference. Leading industry executives, academics and government officials in the areas of e-Tourism,Internet development, financial investment will be invited to attend and share their views on smart tourism at the conference.</p>
+  		</div>
 	</div>
-	<div class="detail_guest">
-		<div class="speaker_icon">
-			<img src="../images/content_speake.png" class="pic_heart1">
-			<h2 id="word61">GUEST SPEAKERS</h2>
-	  	</div>
-	  	<div class="middle">
-	       	<ul class="pic-person">
-	       	</ul>
-	    </div>
-	</div>
-	<div class="chakan_btn">
-	    <a href="speech.html"><span>Viewing all the speakers</span></a>
-	</div>
-	<div class="watching_focus">
-		<div class="convention ">
-			<img src="../images/pic_logo2.png">
-			<h2>CONFERENCE HIGHLIGHTS</h2>
-			<div class="content_images">
-				<ul class="logo_pic">
-					<li>
-						<a href="">
-							<img src="../images/pic_one.jpg">
-							<span class="word3">40+</span>
-							<span class="word5">GUEST SPEAKER</span>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<img src="../images/pic_two.jpg">
-							<span class="word3">500+</span>
-							<span class="word5">PARTICIPATOR</span>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<img src="../images/pic_three.jpg">
-							<span class="word3">80%</span>
-							<span class="word5">DECISION MAKING LAYER</span>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<img src="../images/pic_four.jpg">
-							<span class="word3">100+</span>
-							<span class="word5">THE COMPANY</span>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="detail_partner">
-		<div class="partner_company">
-			<img src="../images/pic_heart.png" class="pic_heart">
-			<p id="word6">SPONSORS AND PARTNERS</p>
-			<ul class="pic-company">
-				<span class="left-zhuban">HOSTS</span>
+</div>
+<div class="detail_guest">
+	<div class="speaker_icon">
+	<img src="../images/content_speake.png" class="pic_heart1">
+		<p id="word61">GUEST SPEAKER</p>
+  	</div>
+  	<div class="middle">
+       	<ul class="pic-person">
+       	</ul>
+    </div>
+</div>
+<div class="chakan_btn">
+    <a href="speech.html"><span>Viewing all the speakers</span></a>
+</div>
+<div class="watching_focus">
+	<div class="convention ">
+		<img src="../images/pic_logo2.png">
+		<p>CONFERENCE HIGHLIGHTS</p>
+		<div class="content_images">
+			<ul class="logo_pic">
 				<li>
-					<img src="../images/new4.jpg" alt="">
+					<a href="">
+						<img src="../images/pic_one.jpg">
+						<span class="word3">40+</span>
+						<span class="word5">GUEST SPEAKER</span>
+					</a>
 				</li>
 				<li>
-					<img src="../images/new3.jpg" alt="">
-				</li>
-				</ul>
-				<ul class="pic-company1">
-				<span class="left-zhuban clearfix">CO-ORGANIZORS</span>
-				<ul class="pic-company1">
-				<li>   
-					<img src="../images/new5.jpg" alt="">
+					<a href="">
+						<img src="../images/pic_two.jpg">
+						<span class="word3">500+</span>
+						<span class="word5">PARTICIPATOR</span>
+					</a>
 				</li>
 				<li>
-					<img src="../images/new1.jpg" alt="">
+					<a href="">
+						<img src="../images/pic_three.jpg">
+						<span class="word3">80%</span>
+						<span class="word5">DECISION MAKING LAYER</span>
+					</a>
 				</li>
-				<li>   
-					<img src="../images/new2.jpg" alt="">
+				<li>
+					<a href="">
+						<img src="../images/pic_four.jpg">
+						<span class="word3">100+</span>
+						<span class="word5">THE COMPANY</span>
+					</a>
 				</li>
+			</ul>
+		</div>
+	</div>
+</div>
+<div class="detail_partner">
+	<div class="partner_company">
+		<img src="../images/pic_heart.png" class="pic_heart">
+		<p id="word6">SPONSORS AND PARTNERS</p>
+		<ul class="pic-company">
+		<span class="left-zhuban">HOSTS</span>
+			<li>
+				<img src="../images/new4.jpg" alt="">
+			</li>
+			<li>
+				<img src="../images/new3.jpg" alt="">
+			</li>
 			</ul>
 			<ul class="pic-company1">
-				<span class="left-zhuban clearfix">COOPERATIVE PARTNERS</span>
-				<li>   
-					<img src="../images/new7.jpg" alt="">
-				</li>
-				<li>
-					<img src="../images/new6.jpg" alt="">
-				</li>
-				<li>
-					<img src="../images/new9.jpg" alt="">
-				</li>
-			</ul>
-			<ul class="pic-company3">
-				<span class="left-zhuban clearfix">SUPPORTER</span>
-				<li>   
-					<img src="../images/new8.jpg" alt="">
-				</li>
-			</ul>
-		</div>
+			<span class="left-zhuban clearfix">CO-ORGANIZORS</span>
+			<ul class="pic-company1">
+			<li>   
+				<img src="../images/new5.jpg" alt="">
+			</li>
+			<li>
+				<img src="../images/new1.jpg" alt="">
+			</li>
+			<li>   
+				<img src="../images/new2.jpg" alt="">
+			</li>
+		</ul>
+		<ul class="pic-company1">
+		<span class="left-zhuban clearfix">COOPERATIVE PARTNERS</span>
+			<li>   
+				<img src="../images/new7.jpg" alt="">
+			</li>
+			<li>
+				<img src="../images/new6.jpg" alt="">
+			</li>
+			<li>
+				<img src="../images/new9.jpg" alt="">
+			</li>
+
+		</ul>
+		
+		<ul class="pic-company3">
+		<span class="left-zhuban clearfix">SUPPORTER</span>
+			<li>   
+				<img src="../images/new8.jpg" alt="">
+			</li>
+		</ul>
 	</div>
-	<div class="footer">
-	</div>
-	<!-- 回到顶部 -->
-	<a id="gototop" href="#"></a>
-	<script src="../js/jquery-1.9.1.min.js" type="text/javascript"></script>
-	<script src="../js/jquery.nicenav.js" type="text/javascript"></script>
-	<script src="../js/myfirst.js" type="text/javascript"></script>
-	<!-- 解决首页导航条图标-->
-	<script type="text/javascript">
-	  	  	iconA();
-	  	  	$('.footer').load("foot.html");
-	    $(function(){       
-	        $.get("speechs.txt", function(json, textStatus) {
-	            var JSON = json.speechs,
-	                html = "";
-	            $.each(JSON, function(key,obj){
-	                  html +='<li>'+'<a href="javascript:;">'+'<img src="'+obj.images+'">'+'<span class="word1">'+obj.ename+'</span>'+'<span class="word2">'+obj.ewhere+'</span></a></li>'
-	                })
-	            $(".pic-person").html(html);
-	        }, 'json');
-	});
-		</script>
-	<!-- 返回顶部 -->
-	<script type="text/javascript">
-		$(function(){
-		$(window).scroll(function(){  //只要窗口滚动,就触发下面代码 
-		var scrollt = document.documentElement.scrollTop + document.body.scrollTop; //获取滚动后的高度 
-		if( scrollt >300 ){  //判断滚动后高度超过300px,就显示  
-			$("#gototop").fadeIn(400); //淡出     
-		}else{      
-			$("#gototop").stop().fadeOut(400); //如果返回或者没有超过,就淡入.必须加上stop()停止之前动画,否则会出现闪动   
-		}
-		});
-		$("#gototop").click(function(){ //当点击标签的时候,使用animate在200毫秒的时间内,滚到顶部
-		$("html,body").animate({scrollTop:"0px"},200);
-		});
-		});
+</div>
+
+<div class="footer">
+</div>
+<!-- 回到顶部 -->
+<a id="gototop" href="#"></a>
+<script src="../js/jquery-1.9.1.min.js"></script>
+<script src="../js/myfirst.js"></script>
+    <!-- 解决首页导航条图标-->
+<script type="text/javascript">
+  	  	iconA();
+  	  	$('.footer').load("foot.html");
+    $(function(){       
+        $.get("speechs.txt", function(json, textStatus) {
+            var JSON = json.speechs,
+                html = "";
+            $.each(JSON, function(key,obj){
+                  html +='<li>'+'<a href="#">'+'<img src="'+obj.images+'">'+'<span class="word1">'+obj.ename+'</span>'+'<span class="word2">'+obj.ewhere+'</span></a></li>'
+                })
+            $(".pic-person").html(html);
+        }, 'json');
+});
 	</script>
+<!-- 返回顶部 -->
+<script type="text/javascript">
+	$(function(){
+	$(window).scroll(function(){  //只要窗口滚动,就触发下面代码 
+	var scrollt = document.documentElement.scrollTop + document.body.scrollTop; //获取滚动后的高度 
+	if( scrollt >300 ){  //判断滚动后高度超过300px,就显示  
+		$("#gototop").fadeIn(400); //淡出     
+	}else{      
+		$("#gototop").stop().fadeOut(400); //如果返回或者没有超过,就淡入.必须加上stop()停止之前动画,否则会出现闪动   
+	}
+	});
+	$("#gototop").click(function(){ //当点击标签的时候,使用animate在200毫秒的时间内,滚到顶部
+	$("html,body").animate({scrollTop:"0px"},200);
+	});
+	});
+</script>
 </body>
 </html>
