--- a/en/yuhuiqunti.html
+++ b/en/yuhuiqunti.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>2015世界互联网大会|与会群体</title>
+  <title>与会群体</title>
   <link type="text/css" rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/reset.css">
 </head>
