--- a/index.html
+++ b/index.html
@@ -2,191 +2,196 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>2015世界互联网大会|首页</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>首页</title>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/font.css">
 	<link rel="stylesheet" type="text/css" href="css/base.css">
+    <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="js/jquery.nicenav.js" type="text/javascript"></script>
 </head>
 <body>
-<div class="container">
-	<div class="wrap">
-		<div class="w1003">
-			<a href="index.html">
-				<img src="images/logo.png" alt="2015世界旅游大会" class="header_bicon wlogo">
-			</a>
-			<div class="language_list">
-		   		<i class="select_icon"></i>
-	           <label class="select_language">中文</label>
-	           <ul class="language_bar">
-	               <li><a href="en/index.html">English</a></li>
-	               <li id="no-line"><a href="javascript:;">中文</a></li>
-	           </ul>
-			</div>
+<!-- <div class="wrap"> -->
+	<div class="w1003">
+		<a href="index.html">
+			<img src="images/logo.png" alt="2015世界旅游大会" class="header_bicon wlogo">
+		</a>
+		<div class="language_list">
+	   		<i class="select_icon"></i>
+           <label class="select_language">中文</label>
+           <ul class="language_bar">
+               <li><a href="en/index.html">English</a></li>
+               <li id="no-line"><a href="javascript:;">中文</a></li>
+           </ul>
 		</div>
 	</div>
-	<div class="wrap banner posR">
-		<img src="images/banner1.jpg">
-	<div class="nav_icon posR"> 
-				<ul class="banner-ul posA">
-					<li>
-						<a href="speech.html" id="01_icon">
-							<i class="icon icon-members Del_L" id="001_icon"></i>
-							<span>演讲嘉宾</span>
-						</a>
-					</li>
-					<li>
-						<a href="Meetingschedule.html" id="02_icon">
-							<i class="icon icon-time" id="002_icon"></i>
-							<span id="001_span" class="01_span">会议日程</span>
-						</a>
-					</li>
-					<li>
-						<a href="yuhuiqunti1.html" id="03_icon">
-							<i class="icon icon-community" id="003_icon"></i>
-							<span>与会群体</span>
-						</a>
-					</li>
-					<li>
-						<a href="registeredfirst.html" id="04_icon">
-							<i class="icon icon-enroll" id="004_icon"></i>
-							<span>我要报名</span>
-						</a>
-					</li>
-					<li>
-						<a href="server.html" id="06_icon">
-							<i class="icon icon-server" id="006_icon"></i>
-							<span>会场服务</span>
-						</a>
-					</li>
-					<li class="no_rpad">
-						<a href="contact.html" id="07_icon">
-							<i class="icon icon-contact Del_R" id="007_icon"></i>
-							<span>联系我们</span>
-						</a>
-					</li>
-				</ul>
-			</div>
-			<div class="nav_mask">
-		   </div>
-	</div>
-	<div class="content_summary">
-		<div class="summary_word">
-	  		<div class="summary_title">
-	     		<h2 class="summary_name font30px fcdcdcd">2015<br/>International<br/> Smart <br/>Tourism<br/> Conference </h2>
-	     		<img src="images/summary_logo.png" class="summary_logo">
-	  		</div>
-	 		<div class="summary_phase">
-	      		<p class="summary_phases font14px f888888">2015世界旅游互联网大会由浙江大学、中国风景名胜区协会、联合国世界旅游组织、亚太协会以及香港理工大学联合发起；旨在为相关政府部门、科研院所、行业协会、旅游企业及金融机构搭建一个信息共享、合作交流和共谋发展的高端交流平台。<br/>首届大会将于2015年10月17-18日在杭州举办。届时，国内外旅游互联网领军人物、金融投资机构、政府机构、科研院所以及相关行业代表将就"新常态、新旅行、新体验、新范式”下的智慧旅游建设、旅游互联网＋资本等系列话题进行探讨。<br/>本会议共设有两个分论坛：<br/>1）智慧旅游分论坛：主要面向目的地/旅游局／景区／线下旅游企业、智慧旅游技术解决方案企业等。重点探讨新常态下互联网+、智慧旅游、旅游O2O、旅游大数据、中国出入境游数据分析、跨屏跨界整合营销、旅游大数据应用给旅游业带来的变革及旅游目的地、景区、旅游局及线下旅游企业O2O转型的思路、方法及实践。<br/>2）旅游互联网＋金融分论坛：重点讨论互联网+、旅游O2O的模式创新、旅游分享经济、产业链整合、投资并购、初创旅游O2O企业与资本的对接等。</p>
-	  		</div>
-		</div>
-	</div>
-	<div class="detail_guest">
-	  	<div class="speaker_icon">
-			<img src="images/content_speake.png" class="pic_heart1">
-			<h2 id="word61">演讲嘉宾</h2>
-	  	</div>
-	  	<div class="middle">
-	       	<ul class="pic-person">
-	       	</ul>
-	    </div>
-	</div>
-	<div class="chakan_btn">
-	    <a href="speech.html"><span>查看全部演讲嘉宾</span></a>
-	</div>
-	<div class="watching_focus">
-		<div class="convention ">
-			<img src="images/pic_logo2.png">
-			<h2>本届大会看点</h2>
-			<div class="content_images">
-				<ul class="logo_pic">
-					<li>
-						<a href="">
-							<img src="images/pic_one.jpg">
-							<span class="word3">40+</span>
-							<span class="word4">演讲嘉宾</span>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<img src="images/pic_two.jpg">
-							<span class="word3">600+</span>
-							<span class="word4">与会嘉宾</span>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<img src="images/pic_three.jpg">
-							<span class="word3">80%</span>
-							<span class="word4">决策层</span>
-						</a>
-					</li>
-					<li>
-						<a href="">
-							<img src="images/pic_four.jpg">
-							<span class="word3">100+</span>
-							<span class="word4">与会公司</span>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="detail_partner">
-		<div class="partner_company">
-			<img src="images/pic_heart.png" class="pic_heart">
-			<h2 id="word6">主办及合作伙伴</h2>
-			<ul class="pic-company">
-			<span class="left-zhuban">主办单位</span>
+<!-- </div> -->
+<div class="wrap banner posR">
+	<img src="images/banner1.jpg">
+<div class="nav_icon posR"> 
+			<ul class="banner-ul posA">
 				<li>
-					<img src="images/new4.jpg" alt="">
+					<a href="speech.html" id="01_icon">
+						<i class="icon icon-members Del_L" id="001_icon"></i>
+						<span>演讲嘉宾</span>
+					</a>
 				</li>
 				<li>
-					<img src="images/new3.jpg" alt="">
-				</li>
-			</ul>
-			<ul class="pic-company1">
-				<span class="left-zhuban clearfix">协办单位</span>
-				<li>   
-					<img src="images/new5.jpg" alt="">
+					<a href="Meetingschedule.html" id="02_icon">
+						<i class="icon icon-time" id="002_icon"></i>
+						<span id="001_span" class="01_span">会议日程</span>
+					</a>
 				</li>
 				<li>
-					<img src="images/new1.jpg" alt="">
-				</li>
-				<li>   
-					<img src="images/new2.jpg" alt="">
-				</li>
-			</ul>
-			<ul class="pic-company1">
-			<span class="left-zhuban clearfix">首席合作</span>
-				<li>   
-					<img src="images/new7.jpg" alt="">
+					<a href="yuhuiqunti1.html" id="03_icon">
+						<i class="icon icon-community" id="003_icon"></i>
+						<span>与会群体</span>
+					</a>
 				</li>
 				<li>
-					<img src="images/new6.jpg" alt="">
+					<a href="registeredfirst.html" id="04_icon">
+						<i class="icon icon-enroll" id="004_icon"></i>
+						<span>我要报名</span>
+					</a>
 				</li>
 				<li>
-					<img src="images/new9.jpg" alt="">
+					<a href="server.html" id="06_icon">
+						<i class="icon icon-server" id="006_icon"></i>
+						<span>会场服务</span>
+					</a>
 				</li>
-			</ul>
-			<ul class="pic-company3">
-			<span class="left-zhuban clearfix">指导单位</span>
-				<li>   
-					<img src="images/new8.jpg" alt="">
+				<li class="no_rpad">
+					<a href="contact.html" id="07_icon">
+						<i class="icon icon-contact Del_R" id="007_icon"></i>
+						<span>联系我们</span>
+					</a>
 				</li>
 			</ul>
 		</div>
-	</div>
-	<div class="footer"></div>
+		<div class="nav_index">
+	   </div>
 </div>
+<div class="content_summary">
+	<div class="summary_word">
+  		<div class="summary_title">
+	 		<h1 class="summary_year font30px fcdcdcd">2015</h1> 
+     		<h2 class="summary_name font30px fcdcdcd">International<br/> Smart <br/>Tourism<br/> Conference </h2>
+     		<img src="images/summary_logo.png" class="summary_logo">
+  		</div>
+ 		<div class="summary_phase">
+      		<p class="summary_phases font14px f888888">2015世界旅游互联网大会由浙江大学、中国风景名胜区协会、联合国世界旅游组织、亚太协会以及香港理工大学联合发起；旨在为相关政府部门、科研院所、行业协会、旅游企业及金融机构搭建一个信息共享、合作交流和共谋发展的高端交流平台。</p>
+      		<p class="summary_phases font14px f888888">首届大会将于2015年10月17-18日在杭州举办。届时，国内外旅游互联网领军人物、金融投资机构、政府机构、科研院所以及相关行业代表将就"新常态、新旅行、新体验、新范式”下的智慧旅游建设、旅游互联网＋资本等系列话题进行探讨。</p>
+      		<p class="summary_phases font14px f888888">本会议共设有两个分论坛：</p>
+      		<p class="summary_phases font14px f888888">1）智慧旅游分论坛：主要面向目的地/旅游局／景区／线下旅游企业、智慧旅游技术解决方案企业等。重点探讨新常态下互联网+、智慧旅游、旅游O2O、旅游大数据、中国出入境游数据分析、跨屏跨界整合营销、旅游大数据应用给旅游业带来的变革及旅游目的地、景区、旅游局及线下旅游企业O2O转型的思路、方法及实践。</p>
+      		<p class="summary_phases font14px f888888">2）旅游互联网＋金融分论坛：重点讨论互联网+、旅游O2O的模式创新、旅游分享经济、产业链整合、投资并购、初创旅游O2O企业与资本的对接等。</p>
+  		</div>
+	</div>
+</div>
+<div class="detail_guest">
+  	<div class="speaker_icon">
+		<img src="images/content_speake.png" class="pic_heart1">
+		<p id="word61">演讲嘉宾</p>
+  	</div>
+  	<div class="middle">
+       	<ul class="pic-person">
+       	</ul>
+    </div>
+</div>
+<div class="chakan_btn">
+    <a href="speech.html"><span>查看全部演讲嘉宾</span></a>
+</div>
+<div class="watching_focus">
+	<div class="convention ">
+		<img src="images/pic_logo2.png">
+		<p>本届大会看点</p>
+		<div class="content_images">
+			<ul class="logo_pic">
+				<li>
+					<a href="">
+						<img src="images/pic_one.jpg">
+						<span class="word3">40+</span>
+						<span class="word4">演讲嘉宾</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/pic_two.jpg">
+						<span class="word3">600+</span>
+						<span class="word4">与会嘉宾</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/pic_three.jpg">
+						<span class="word3">80%</span>
+						<span class="word4">决策层</span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="images/pic_four.jpg">
+						<span class="word3">100+</span>
+						<span class="word4">与会公司</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
+<div class="detail_partner">
+	<div class="partner_company">
+		<img src="images/pic_heart.png" class="pic_heart">
+		<p id="word6">主办及合作伙伴</p>
+		<ul class="pic-company">
+		<span class="left-zhuban">主办单位</span>
+			<li>
+				<img src="images/new4.jpg" alt="">
+			</li>
+			<li>
+				<img src="images/new3.jpg" alt="">
+			</li>
+		</ul>
+		<ul class="pic-company1">
+			<span class="left-zhuban clearfix">协办单位</span>
+			<li>   
+				<img src="images/new5.jpg" alt="">
+			</li>
+			<li>
+				<img src="images/new1.jpg" alt="">
+			</li>
+			<li>   
+				<img src="images/new2.jpg" alt="">
+			</li>
+		</ul>
+		<ul class="pic-company1">
+		<span class="left-zhuban clearfix">首席合作</span>
+			<li>   
+				<img src="images/new7.jpg" alt="">
+			</li>
+			<li>
+				<img src="images/new6.jpg" alt="">
+			</li>
+			<li>
+				<img src="images/new9.jpg" alt="">
+			</li>
+		</ul>
+		<ul class="pic-company3">
+		<span class="left-zhuban clearfix">指导单位</span>
+			<li>   
+				<img src="images/new8.jpg" alt="">
+			</li>
+		</ul>
+	</div>
+</div>
+<div class="footer"></div>
 <!-- 回到顶部 -->
 <a id="gototop" href="#"></a>
-<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
-<script src="js/jquery.nicenav.js" type="text/javascript"></script>
-<script src="js/myfirst.js" type="text/javascript"></script>
+
+<script src="js/jquery-1.9.1.min.js"></script>
+<script src="js/myfirst.js"></script>
     <script type="text/javascript">
-   	iconA();
-   	$(".footer").load("foot.html");
+  	  	iconA();
+  	  	$(".footer").load("foot.html");
     $(function(){       
         $.get("speechs.txt", function(json, textStatus) {
             var JSON = json.speechs,
@@ -197,7 +202,7 @@
             $(".pic-person").html(html);
         }, 'json');
 });
-</script>
+	</script>
 <!-- 返回顶部 -->
 <script type="text/javascript">
 	$(function(){
