--- a/registeredsecs.html
+++ b/registeredsecs.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>2015世界互联网大会|填写信息</title>
+    <title>填写信息</title>
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/zanzhu.css">
