--- a/Meetingschedule.html
+++ b/Meetingschedule.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>2015世界互联网大会|会议日程</title>
+    <title>会议日程</title>
     <link type="text/css" rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/reset.css">
 </head>
