--- a/activity.html
+++ b/activity.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>2015世界互联网大会|会场实况</title>
+    <title>会场实况</title>
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" href="css/reset.css">
