--- a/message.html
+++ b/message.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>2015世界互联网大会|嘉宾留言管理</title>
+  <title>嘉宾留言管理</title>
   <link type="text/css" rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/font.css">
