--- a/speech.html
+++ b/speech.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>2015世界互联网大会|演讲嘉宾</title>
+  <title>演讲嘉宾</title>
   <link type="text/css" rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/zanzhu.css">
@@ -58,7 +58,7 @@
                 html = "";
             $.each(JSON, function(key,obj){
                   html += '<li>'+
-                                        '<a href="javascript:;">'+
+                                        '<a href="#">'+
                                              '<img src="'+ obj.images +'" alt="" >'+
                                              '<span class="word1">'+obj.name+'</span>'+
                                              '<span class="word2">'+obj.where+'</span>'
