--- a/zanzhu.html
+++ b/zanzhu.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>2015世界互联网大会|赞助我们</title>
+    <title>赞助我们</title>
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/zanzhu.css">
@@ -20,7 +20,7 @@
       <li><a href="Meetingschedule.html">会议日程</a></li>
       <li><a href="yuhuiqunti1.html">与会群体</a></li>
       <li><a href="registeredfirst.html">我要报名</a></li>
-      <li class="active"><a href="zanzhu.html">赞助我们</a></li>
+      <!-- <li class="active"><a href="zanzhu.html">赞助我们</a></li> -->
       <li><a href="server.html">会场服务</a></li>
       <li><a href="contact.html">联系我们</a></li>
     </ul>
